Global styles chenges for desktop

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -15,11 +15,11 @@
   width: 45%;
   display: flex;
   justify-content: space-between;
-  font-size: clamp(20px, 0.5em, 30px);
+  font-size: clamp(18px, 0.3em, 26px);
   padding: 0 3%;
 
   a {
-    color: #ffffff;
+    color: $white-color;
     text-decoration: none;
     font-family: $sections-sub-title-font-family;
     li {
