--- a/src/components/OurServices/ourServices.scss
+++ b/src/components/OurServices/ourServices.scss
@@ -2,9 +2,8 @@
 
 .container-section {
     display: flex;
-    margin: 0 5%;
     background-color: rgb(12, 16, 19);
-    color: #ffffff;
+    color: $white-color;
     flex-direction: column;
 }
 
@@ -70,8 +69,6 @@
     font-family: $section-title-font-family;
     text-align: center;
     letter-spacing: 1.5px;
-    font-weight: 700;
-    padding-bottom: 20px;
 }
 
 .our-service-item-text {
