--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -115,10 +115,10 @@
     padding: 0 6% 1%;
   }
 
-  .your-data-title { margin-bottom: 0; }
+  .your-data-title { margin-bottom: 3%; }
 
   .items-wrapper {
-    width: 60%;
+    width: 50%;
     padding: 2% 7% 2% 2%;
   }
 
@@ -133,8 +133,8 @@
     padding: 0 9%;
 
     img {
-      width: 20%;
-      height: 100%;
+      width: 3em;
+      height: 3em;
     }
   }
 
