--- a/src/components/YourData/your-data.scss
+++ b/src/components/YourData/your-data.scss
@@ -15,13 +15,14 @@
 .your-data-items {
   display: flex;
   align-items: center;
+  flex-direction: column;
   height: 40vh;
   position: relative;
   transition: all 0.3s;
 
   img {
-    width: 20%;
-    height: 50%;
+    width: 25rem;
+    height: 25rem;
   }
 
   p {
@@ -33,9 +34,9 @@
 .your-data-title {
   font-family: $sections-sub-title-font-family;
   text-align: right;
-  padding-right: 8%;
   margin-top: 2rem;
   margin-bottom: 6rem;
+  padding: 0 3%;
 }
 
 .your-data-icon {
@@ -115,7 +116,10 @@
     padding: 0 6% 1%;
   }
 
-  .your-data-title { margin-bottom: 3%; }
+  .your-data-title {
+    margin-bottom: 3%;
+    padding-right: 8%;
+  }
 
   .items-wrapper {
     width: 50%;
@@ -131,6 +135,7 @@
   .your-data-items {
     height: calc(100%/3);
     padding: 0 9%;
+    flex-direction: row;
 
     img {
       width: 3em;
