--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@ $main-orange: rgba(243, 159, 24, 0.9);
 $red-errors: #cc0017;
 $green-succeed: #33a533;
 $white-color: #ffffff;
+$black-color: rgba(12, 16, 19, 0.9);
 
 //Text sizes
 $links-and-cta-font-size: clamp(100%, 1.1em, 27px);
