--- a/src/components/Three/three.scss
+++ b/src/components/Three/three.scss
@@ -3,7 +3,8 @@
 .three-section {
     display: flex;
     background-image: url('../assets/images/work-img.jpg');
-    background-size: 100% 100%;
+    background-size: 100% 135%;
+    background-position: 0 40%;
     background-repeat: no-repeat;
     position: relative;
     flex-direction: column;
@@ -23,7 +24,7 @@
     visibility: hidden;
     transition: opacity 200ms, visibility 200ms;
     width: 70%;
-    background-color: rgba(255, 255, 255, 0.52);
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 5%;
     border-radius: 5px;
 }
