--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -22,6 +22,7 @@
     color: $white-color;
     text-decoration: none;
     font-family: $sections-sub-title-font-family;
+    padding: 3% 0;
     li {
       list-style-type: none;
     }
