--- a/css/globalStyles.scss
+++ b/css/globalStyles.scss
@@ -114,6 +114,10 @@ p, label {
   .simple-section-wrapper {
     padding: 0;
   }
+
+  .mbanalyst-contact-form {
+    width: 100%;
+  }
 }
 
 @media (min-width: $md-screen) {
