Mobile three section changes

--- a/components/Three/three.module.scss
+++ b/components/Three/three.module.scss
@@ -76,6 +76,11 @@
 }
 
 @media (max-width: $xs-screen) {
+
+    .section {
+        background-size: initial;
+    }
+
     .logo_container {
         height: 65vh;
 
@@ -83,7 +88,7 @@
             height: 40px;
         }
 
-        .text {
+        .text_container {
             visibility: visible;
             opacity: 1;
         }
