--- a/components/Three/three.module.scss
+++ b/components/Three/three.module.scss
@@ -11,7 +11,7 @@
 
 .section {
     display: flex;
-    background-image: url('/assets/images/work-img.jpg');
+    background-image: url('/assets/images/work-img.jpg?webp');
     background-size: 100% 135%;
     background-repeat: no-repeat;
     position: relative;
