--- a/components/WhoWeAre/whoWeAre.module.scss
+++ b/components/WhoWeAre/whoWeAre.module.scss
@@ -25,7 +25,7 @@
 .first_overlay {
     height: 100%;
     width: 100%;
-    background-image: url('/assets/images/image2.jpg');
+    background-image: url('/assets/images/image2.jpg?webp');
     background-size: cover;
     background-position: 70% 20%;
     position: absolute;
