--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     height: 100vh;
-    background-image: url('/assets/images/image1.jpg');
+    background-image: url('/assets/images/image1.jpg?webp');
     background-size: cover;
     background-position: 50% 90%;
     position: center;
