--- a/components/WhoWeAre/whoWeAre.module.scss
+++ b/components/WhoWeAre/whoWeAre.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     padding-top: 15%;
+    flex-wrap: wrap;
 }
 
 .section {
@@ -89,7 +90,7 @@
     height: 50%;
 }
 
-@media (max-width: $xs-screen) {
+@media (max-width: $md-screen) {
     .section_icon {
         img, p { opacity: 1; }
     }
@@ -101,7 +102,6 @@
 
 @media (min-width: $md-screen) {
     .container {
-        flex-direction: row;
         padding-top: 5%;
     }
     .section {
