--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -45,6 +45,44 @@
     padding-right: 4px;
 }
 
+.button {
+    background-color: $main-orange;
+    color: $white-color;
+    padding: 1% 1%;
+    border: none;
+    cursor: pointer;
+    transition: 300ms;
+    position: absolute;
+    right: 0;
+    bottom: 8%;
+    margin-right: 5%;
+    width: 12%;
+    border-radius: 3px;
+    font-weight: bold;
+    overflow: hidden;
+    box-shadow: #282c34;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+.button:before {
+    content: '';
+    position: absolute;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, #fff, transparent);
+    transition: 0.5s;
+}
+
+.button:hover:before {
+    left: 100%;
+}
+
+
 @media (max-width: $xs-screen) {
     .container {
         img {
