--- a/components/Explore/explore.module.scss
+++ b/components/Explore/explore.module.scss
@@ -82,6 +82,7 @@
         &:hover {
             background-color: rgba(243, 159, 24, 0.7);
             width: 23%;
+            font-weight: bold;
         }
     }
 
