--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -37,15 +37,11 @@
     position: relative;
 }
 
-.text_container {
-    margin-top: 2%;
-}
-
 .text {
     font-family: adobe-garamond-pro,serif;
     font-weight: 400;
     font-style: italic;
-    font-size: clamp(55px, 3em, 100px);
+    font-size: clamp(55px, 3em, 80px);
     color: #ffffff;
     display: flex;
     justify-content: flex-start;
@@ -60,48 +56,85 @@
     padding-right: 4px;
 }
 
-.button {
-    background-color: $main-orange;
-    color: $white-color;
-    padding: 1% 1%;
-    border: none;
-    cursor: pointer;
-    transition: 300ms;
-    position: absolute;
-    width: 25%;
-    font-size: 0.55em;
-    border-radius: 3px;
-    font-weight: bold;
-    overflow: hidden;
-    box-shadow: #282c34;
-    bottom: 10%;
-
-    &:hover {
-        transform: scale(1.1);
-    }
-}
-
-.button:before {
-    content: '';
-    position: absolute;
-    left: -100%;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, transparent, #fff, transparent);
-    transition: 0.5s;
-}
-
-.button:hover:before {
-    left: 100%;
-}
-
 .button_container {
     width: 100%;
     display: flex;
-    justify-content: center;
+    margin-top: 7%;
+    margin-left: 3%;
 }
 
+
+.button {
+    background-color: $main-orange;
+    color: $black-color;
+    padding: 1% 1%;
+    margin: 0 1%;
+    border: none;
+    cursor: pointer;
+    width: 15%;
+    position: relative;
+    z-index: 1;
+    font-size: 0.55rem;
+    font-weight: bold;
+    border-radius: 5px;
+
+}
+
+.button:hover {
+    transform: scale(1.1);
+    transition: transform 250ms ease-in;
+    color: $white-color;
+}
+
+.button_one {
+    background-color: $black-color;
+    color: $white-color;
+}
+
+.button::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $black-color;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 400ms ease-in;
+    border: none;
+
+}
+
+.button:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.button_one::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $main-orange;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 400ms ease-in;
+    border: none;
+}
+
+.button_one:hover {
+    color: $black-color;
+}
+
+.button_one:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
 
 @media (max-width: $xs-screen) {
     .container {
